@@ -1,9 +1,11 @@
-CHANGES.txt - 2009-02-04
+CHANGES.txt - 2009-02-10
 ------------------------
 
 CHANGES IN CUPS V1.4b3
 
 	- Documentation fixes (STR #3044, STR #3057)
+	- Clicking on "Select Another Make/Manufacturer" in the web interface
+	  incorrectly added the printer (STR #3095)
 	- The scheduler no longer uses programs with insecure file
 	  permissions.
 	- httpAssembleURI*() did not escape backslashes in hostnames.
